--- a/index.html
+++ b/index.html
@@ -412,9 +412,11 @@
               <div class="color-number">#7</div>
               <div class="color-number">#8</div>
               <div class="color-number">#9</div>
+              <div class="color-number">#10</div>
             </div>
             <div class="color-boxes">
               <div class="color-box active" style="background-color: #FFFFFF;" data-color="#FFFFFF"></div>
+              <div class="color-box" style="background-color: #FBFDC8;" data-color="#FBFDC8"></div>
               <div class="color-box" style="background-color: #FD0192;" data-color="#FD0192"></div>
               <div class="color-box" style="background-color: #F4051C;" data-color="#F4051C"></div>
               <div class="color-box" style="background-color: #FAEB08;" data-color="#FAEB08"></div>
